Small fix for the background in code styling in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,6 +96,7 @@ body {
   border-color: #3f3f46;
 }
 .dark .prose pre code {
+  background: none;
   color: #e4e4e7;
 }
 .dark .prose blockquote {
